# holmesMcp

./: .gitattributes  .gitignore  .mcp.json  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.claude/: settings.json
.claude/commands/: end-session.md
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml  docs.yml
clients-mcp/: index.html
configuration/: index.html
contribuer/: index.html
core/ajax/: holmesMcp.ajax.php
core/class/: holmesMcp.class.php
core/php/: holmesMcp.inc.php  jeeholmesMcp.php
desktop/js/: holmesMcp.js
desktop/modal/: modal.holmesMcp.php
desktop/php/: holmesMcp.php
diagnostic/: index.html
docs/: PLANNING.md  README.md  ROADMAP.md  skill-coverage-matrix.md  skill-migration-audit-playbook.md
docs/decisions/: ADR-0001.md  ADR-0002.md  ADR-0003.md  ADR-0004.md  ADR-0005.md  ADR-0006.md  ADR-0007.md  ADR-0008.md  ADR-0009.md  ADR-0010.md  ADR-0011.md  ADR-0012.md  ADR-0013.md  ADR-0014.md  ADR-0015.md  ADR-0016.md  ADR-0017.md  ADR-0018.md  ADR-0019.md  ADR-0021.md
docs/market/: forum-developers-lounge.md
docs/sessions/: 2026-05-03-j0-1-bootstrap.md  2026-05-03-j0-1b-devtools.md  2026-05-03-j1-1-core-tests.md  2026-05-03-j1-2-skill-coverage.md  2026-05-04-j2-1-sanitize.md  (+23 more)
faq/: index.html
installation/: index.html
jeedom-audit/: index.html
plugin_info/: changelog.md  info.json  install.php  packages.json
presentation/: index.html
resources/: index.html  post_install.sh  requirements.txt
search/: search_index.json
securite/: index.html
tests/: conftest.py
tools/: index.html
(+79 files in other folders)
